<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/first_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/first_room_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/parking_textview"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/second_room_button"
            android:background="@android:drawable/button_onoff_indicator_on"/>
    <Button
            android:text="@string/second_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/second_room_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/first_room_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/button3"
            android:background="@android:drawable/button_onoff_indicator_on"/>
    <Button
            android:text="@string/third_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/second_room_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/name_editText"
            android:background="@android:drawable/button_onoff_indicator_on"/>
    <TextView
            android:text="@string/car_parking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="24sp" android:textAlignment="center" android:textColor="#FF9800"
            android:layout_marginStart="@dimen/margin_wide" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/parking_textview" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_editText" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintBottom_toTopOf="@+id/license_plate_editText" android:autofillHints=""
            tools:targetApi="o" android:hint="@string/name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/license_plate_editText" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/name_editText" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/brand_editText" android:importantForAutofill="no"
            android:hint="@string/license_plate"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/brand_editText" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/license_plate_editText" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            app:layout_constraintBottom_toTopOf="@+id/update_button" android:hint="@string/brand"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_button"
            android:background="@android:color/holo_blue_light"
            app:layout_constraintStart_toStartOf="@+id/brand_editText"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/brand_editText"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:background="@android:color/holo_red_light" app:layout_constraintEnd_toEndOf="@+id/brand_editText"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/brand_editText"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>